build/rules.v4
#####################################################
##  filename:   rules.v4                           ##
##  path:       ~/src/deploy/cloud/aws/build       ##
##  purpose:    iptables rules                     ##
##  date:       05/06/2017                         ##
##  repo:       https://github.com/DevOpsEtc/aced  ##
##  clone path: ~/aced/app/build                   ##
#####################################################

*filter

# Default policy chains (drop all connections)
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

# Accept loopback interface connections
-A INPUT -i lo -m comment --comment "Loopback Interface" -j ACCEPT
-A OUTPUT -o lo -m comment --comment "Loopback Interface" -j ACCEPT

# Accept established & related connections
-A INPUT -i eth0 -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -o eth0 -m conntrack --ctstate ESTABLISHED -j ACCEPT

# Accept incoming SSH connections
-A INPUT -i eth0 -p tcp --dport ssh_port -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp --sport ssh_port -m conntrack --ctstate ESTABLISHED -j ACCEPT

# Accept incoming Rsync connections (static website deployment)
-A INPUT -i eth0 -p tcp --dport 873 -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -o eth0 -p tcp --sport 873 -m conntrack --ctstate ESTABLISHED -j ACCEPT

# Accept outgoing DHCP connections (apt-get needs)
-A OUTPUT -o eth0 -p udp --dport 67:68 --sport 67:68 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -i eth0 -p udp --dport 67:68 --sport 67:68 -m conntrack --ctstate ESTABLISHED -j ACCEPT

# Accept incoming Ping connections (status checks)
-A INPUT -i eth0 -p icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -o eth0 -p icmp --icmp-type 0 -m conntrack --ctstate ESTABLISHED -j ACCEPT

# Accept outgoing Ping connections (connectivity checks)
-A OUTPUT -o eth0 -p icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -i eth0 -p icmp --icmp-type 0 -m conntrack --ctstate ESTABLISHED -j ACCEPT

# Accept incoming HTTP/S connections (HTTP server)
# -A INPUT -i eth0 -p tcp -m multiport --dports 80,443 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p tcp -m multiport --dports 80,443 -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m multiport --sports 80,443 -m conntrack --ctstate ESTABLISHED -j ACCEPT

# Accept outgoing HTTP/S connections (apt-get needs)
-A OUTPUT -o eth0 -p tcp -m multiport --dports 80,443 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -i eth0 -p tcp -m multiport --sports 80,443 -m conntrack --ctstate ESTABLISHED -j ACCEPT

# Accept outgoing DNS connections (DNS lookup)
-A OUTPUT -o eth0 -p udp --dport 53 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -i eth0 -p udp --sport 53 -m conntrack --ctstate ESTABLISHED -j ACCEPT

# Accept outgoing DNS connections (zone transfers)
-A OUTPUT -o eth0 -p tcp --dport 53 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -i eth0 -p tcp --sport 53 -m conntrack --ctstate ESTABLISHED -j ACCEPT

# Accept outgoing WHOIS connections
-A OUTPUT -o eth0 -p tcp --dport 43 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -i eth0 -p tcp --sport 43 -m conntrack --ctstate ESTABLISHED -j ACCEPT

# Accept outgoing NTP connections (systemd-timesyncd NTP client)
# -A OUTPUT -o eth0 -p udp --dport 123 -m conntrack --ctstate NEW,ESTABLISHED,RELATED -j ACCEPT
# -A INPUT -i eth0 -p udp --sport 123 -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -o eth0 -p udp --dport 123 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -i eth0 -p udp --sport 123 -m conntrack --ctstate ESTABLISHED -j ACCEPT

# Log dropped connections to /var/log/syslog
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "IPT_DROP_INPUT: " --log-level 7
-A FORWARD -m limit --limit 5/min -j LOG --log-prefix "IPT_DROP_FORWARD: " --log-level 7
-A OUTPUT -m limit --limit 5/min -j LOG --log-prefix "IPT_DROP_OUTPUT: " --log-level 7

# Drop invalid packets
-A INPUT -m conntrack --ctstate INVALID -j DROP

COMMIT
